# vbindiff

./: .gitmodules  CMakeLists.txt  Makefile  README.md  make.bat
docs/: build.md
win32/: config.h
